clippy_last_3_errors.txt
cargo :     Checking AgroCLI v1.2.0 
(C:\Users\setia\Downloads\AgroCLI)
At line:1 char:1
+ cargo clippy --all-targets 
--all-features -- -D warnings 2>&1 | Out-F 
...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified 
   : (    Checking Ag...nloads\AgroCLI):S  
  tring) [], RemoteException
    + FullyQualifiedErrorId : NativeComman 
   dError
 
error[E0252]: the name `Write` is defined 
multiple times
  --> src\tui.rs:16:5
   |
 2 | use std::fmt::Write; // Added for 
efficient string building
   |     --------------- previous import 
of the trait `Write` here
...
16 | use std::fmt::Write;
   |     ^^^^^^^^^^^^^^^ `Write` 
reimported here
   |
   = note: `Write` must be defined only 
once in the type namespace of this module

error: unused import: `std::fmt::Write`
  --> src\tui.rs:16:5
   |
16 | use std::fmt::Write;
   |     ^^^^^^^^^^^^^^^
   |
   = note: `-D unused-imports` implied by 
`-D warnings`
   = help: to override `-D warnings` add 
`#[allow(unused_imports)]`

error[E0592]: duplicate definitions with 
name `render`
    --> src\tui.rs:1952:5
     |
 821 |     fn render(&self, frame: &mut 
Frame) {
     |     
----------------------------------- other 
definition for `render`
...
1952 |     fn render(&self, f: &mut Frame) 
{
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
duplicate definitions for `render`

Some errors have detailed explanations: 
E0252, E0592.
For more information about an error, try 
`rustc --explain E0252`.
error: could not compile `AgroCLI` (bin 
"AgroCLI") due to 3 previous errors
warning: build failed, waiting for other 
jobs to finish...
error: could not compile `AgroCLI` (bin 
"AgroCLI" test) due to 3 previous errors
